--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp' version '1.7.21-1.0.8'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -18,6 +19,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField("String", "OPENWEATHER_API_KEY", OPENWEATHER_API_KEY)
+
     }
 
     buildTypes {
@@ -52,7 +54,17 @@ dependencies {
     implementation 'com.squareup.moshi:moshi:1.14.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
 
+    implementation 'com.google.devtools.ksp:symbol-processing-api:1.7.21-1.0.8'
+
+    implementation 'androidx.room:room-runtime:2.5.0'
+    implementation 'androidx.room:room-ktx:2.5.0'
+    ksp 'androidx.room:room-compiler:2.5.0'
+
     ksp 'com.squareup.moshi:moshi-kotlin-codegen:1.14.0'
+
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.fragment:fragment-ktx:1.5.5'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
